--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -1,7 +1,8 @@
 {
   "name": "portfolio-app",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://adamgrossberg.github.io",
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
