--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-app",
   "version": "0.1.0",
-  "homepage": "https://adamgrossberg.github.io/portfolio",
+  "homepage": "https://adamgrossberg.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
